[gd_scene load_steps=2 format=3 uid="uid://buok86obce525"]

[ext_resource type="Script" path="res://ui/ant/ant_info_panel.gd" id="1_panel"]

[node name="AntInfoPanel" type="PanelContainer"]
top_level = true
offset_right = 300.0
offset_bottom = 400.0
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ant #1"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RoleLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Role: Worker"

[node name="ColonyLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Colony: Colony-1"

[node name="ActionLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Action: None"

[node name="StatusContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HealthContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatusContainer/HealthContainer"]
layout_mode = 2
alignment = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer/HealthContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health:"

[node name="HealthValueLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer/HealthContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100/100"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/StatusContainer/HealthContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="EnergyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatusContainer/EnergyContainer"]
layout_mode = 2
alignment = 2

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer/EnergyContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Energy:"

[node name="EnergyValueLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer/EnergyContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100/100"

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/StatusContainer/EnergyContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="FoodLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Carried Food: 0 units"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfluencesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Movement Influences:"
horizontal_alignment = 1

[node name="InfluencesLegend" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
